# libdavec

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  Makefile  README.md  libdavec.def
.github/workflows/: cmake.yml
include/: libdavec.h
src/: libdavec.cpp
